--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,7 @@ if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
 endif()
 
 # find dependencies
+find_package(pybind11 REQUIRED)
 find_package(ament_cmake REQUIRED)
 find_package(rclcpp REQUIRED)
 find_package(sas_core REQUIRED)
@@ -64,6 +65,29 @@ install(TARGETS
   DESTINATION lib/${PROJECT_NAME})
 
 ##END## CPP BINARY #####
+
+##### PYBIND11 LIBRARY #####
+
+ament_python_install_package(${PROJECT_NAME})
+
+pybind11_add_module(_${PROJECT_NAME} SHARED
+    src/sas_datalogger_py.cpp
+    )
+
+target_include_directories(_${PROJECT_NAME}
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>)
+
+target_compile_definitions(_${PROJECT_NAME} PRIVATE IS_SAS_PYTHON_BUILD)
+# https://github.com/pybind/pybind11/issues/387
+target_link_libraries(_${PROJECT_NAME} PRIVATE ${PROJECT_NAME} -ldqrobotics)
+
+install(TARGETS _${PROJECT_NAME}
+  DESTINATION "${PYTHON_INSTALL_DIR}/${PROJECT_NAME}"
+)
+
+##END## PYBIND11 LIBRARY #####
 
 ##### PYTHON EXECUTABLES #####
 install(PROGRAMS
